--- a/1 - Fundamentos/3 - Introdução à HTML e CSS/3 - Seletores e posicionamento/style.css
+++ b/1 - Fundamentos/3 - Introdução à HTML e CSS/3 - Seletores e posicionamento/style.css
@@ -1,30 +1,38 @@
-.caixa {
-    color: white;
-    display: inline-block;
-    line-height: 50px;
-    text-align: center;
-    vertical-align: top;
+.super-mario {
+    width: 200px;
+    position: absolute;
+    z-index: 1;
+}
+
+.goomba {
+    width: 100px;
+    z-index: 2;
+    position: absolute;
+    top: 340px;
+    margin-left: 110px;
+
   }
   
-  .width-and-height {
-    height: 50px;
-    width: 50px;
+  .baloon {
+    position: absolute;
+    margin-left: 300px;
+    z-index: 3;
+    
   }
   
-  /* insira na classe abaixo um padding de 20px para aplicá-lo aos itens B, C e D */
-  .padding {
-    padding: 20px;
-  
+  .speach {
+    font-size: 25px;
+    position: absolute;
+    z-index: 4;
+    margin-left: 320px;
+    top: 120px;
+
   }
   
-  /* insira na classe abaixo uma margem de 30px para aplicá-la aos itens C e D */
-  .margin {
-    margin: 30px;
-  
-  }
-  
-  /* insira na classe abaixo uma borda com valor '5px solid black' para aplicá-la ao item D */
-  .border {
-    border: 5px solid black;
-  
+  .bowser {
+    width: 200px;
+    margin-left: 600px;
+    position: absolute;
+    top: 250px;
+
   }
