--- a/1 - Fundamentos/3 - Introdução à HTML e CSS/3 - Seletores e posicionamento/style.css
+++ b/1 - Fundamentos/3 - Introdução à HTML e CSS/3 - Seletores e posicionamento/style.css
@@ -1,19 +1,7 @@
-h1, p {
-    text-align: center;
+div:hover {
+    border: 3px solid green;
 }
 
-li:hover {
-    background-color: red;
-}
-
-li:active {
-    color: white;
-}
-
-ol {
-    list-style: none;
-}
-
-ul {
-    list-style: none;
+div:nth-child(1) {
+    border: 3px solid red;
 }
